Corrects vertical align for homepage title

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -17,7 +17,7 @@
 
   h1 {
     border: 3px solid $light-grey;
-    padding: 10px;
+    padding: 10px 10px 3px 10px;
     margin: 20px auto;
     font-family: 'MuseoSlab-500', $font-stack;
     font-size: 3.2em;
